--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+python-dateutil==2.6.1
 requests==2.18.4
 six==1.11.0
 slackclient==1.1.0
